5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1649_869.log
== TEST (2019-04-11 18:10:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor_da_compra=float(input("Qual o valor da compra:"))
com_desconto=5/100*200
sem_desconto= "valor_da_compra"
print(int("sem_desconto",2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int("sem_desconto",2))
ValueError: invalid literal for int() with base 2: 'sem_desconto'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:10:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor_da_compra=float(input("Qual o valor da compra:"))
com_desconto=5/100*200
sem_desconto= "valor_da_compra"
print(float("sem_desconto",2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(float("sem_desconto",2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:12:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor_da_compra=float(input("Qual o valor da compra:"))
com_desconto=5/100*200
sem_desconto= "valor_da_compra"
print(round("sem_desconto",2))



-- EXECUTION TIME:
0.121808
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/869/main.py", line 7, in <module>
    print(round("sem_desconto",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:12:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor_da_compra=float(input("Qual o valor da compra:"))
com_desconto=5/100*200
sem_desconto= "valor_da_compra"
print(round("sem_desconto",2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("sem_desconto",2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:13:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor_da_compra=float(input("Qual o valor da compra:"))
com_desconto=5/100*200
sem_desconto= "valor_da_compra"
print(round("sem_desconto",2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("sem_desconto",2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:56:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor_da_compra=input("Qual o valor da compra:")
com_desconto=5/100*"valor_da_compra"
sem_desconto="valor_da_compra"
print(round(sem_desconto,2))


-- EXECUTION TIME:
0.145987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/869/main.py", line 5, in <module>
    com_desconto=5/100*"valor_da_compra"
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:56:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor_da_compra=input("Qual o valor da compra:")
com_desconto=5/100*"valor_da_compra"
sem_desconto="valor_da_compra"
print(round(sem_desconto,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    com_desconto=5/100*"valor_da_compra"
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:59:04) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	desconto=val*5/100
else:
	sem_desconto=val
	print(round(val,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    com_desconto=5/100*"valor_da_compra"
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:59:56) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	desconto=val*5/100
else:
	sem_desconto=val
	print(round(val,2))
-- EXECUTION TIME:
0.159166
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:

-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:00:14) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>==200):
	desconto=val*5/100
else:
	sem_desconto=val
	print(round(val,2))
-- ERROR:
File "XXXX", line 2
    if(val>==200):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:02:36) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	desconto=val*5/100
else:
	sem_desconto=val
	print(round(val,2))
-- ERROR:
File "XXXX", line 2
    if(val>==200):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:03:55) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	desconto=val*95/100
else:
	sem_desconto=val
	print(round(val,2))
-- ERROR:
File "XXXX", line 2
    if(val>==200):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 13:04:04) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	desconto=val*95/100
else:
	sem_desconto=val
	print(round(val,2))
-- EXECUTION TIME:
0.143893
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:

-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:06:59) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	msg=val*95/100
else:
	msg=val
	print(input(msg)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:07:18) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	msg=val*95/100
else:
	msg=val
	print(input(msg))
	
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:09:24) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	desconto=val*95/100
	print(round(desconto,2))
else:
	sem_desconto=val
	print(round(sem_desconto,2)
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 13:10:23) 
-- CODE:
val=float(input("Digite o valor da compra:"))
if(val>=200):
	desconto=val*95/100
	print(round(desconto,2))
else:
	sem_desconto=val
	print(round(sem_desconto,2)
	
-- EXECUTION TIME:
0.156546
-- ERROR:
  File "/home/codebench/codes/1649/869/main.py", line 9
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 13:17:33) 
-- CODE:
valor=float(input("digite o valor da compra:"))
if(valor>= 200):
	desconto=valor-valor*5/100
	print(round(desconto,2))
else:
	sem_desconto=valor
	print(sem_desconto)
	
-- EXECUTION TIME:
0.136801
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
